--- a/Week1/upload_data.ipynb
+++ b/Week1/upload_data.ipynb
@@ -30,7 +30,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://github.com/DataTalksClub/nyc-tlc-data/releases/download/yellow/yellow_tripdata_2021-01.csv.gz'"
+    "url = 'https://github.com/DataTalksClub/nyc-tlc-data/releases/download/yellow/yellow_tripdata_2021-01.csv.gz'\n",
+    "url_green_trip = 'https://github.com/DataTalksClub/nyc-tlc-data/releases/download/green/green_tripdata_2019-10.csv.gz'\n",
+    "url_taxi_zone = 'https://github.com/DataTalksClub/nyc-tlc-data/releases/download/misc/taxi_zone_lookup.csv'"
    ]
   },
   {
@@ -56,6 +58,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "78ca9f14-87b6-4e79-9ef1-fb3bf1864ac5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_30100/774904832.py:1: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df_green_trip = pd.read_csv(url_green_trip)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_green_trip = pd.read_csv(url_green_trip)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1dc31d44-f75e-41c7-9867-24b50fe74b8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_taxi_zone = pd.read_csv(url_taxi_zone)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "613955d2-af0e-4dca-95cb-397fafed5554",
    "metadata": {},
@@ -67,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "c5dd4cc9-f7b2-43ed-ba38-6366bf2c7ff9",
    "metadata": {},
    "outputs": [],
@@ -77,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "d2e51e57-ce9a-44d7-a757-7cda6cb9cfc8",
    "metadata": {},
    "outputs": [],
@@ -87,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "ecb96c88-2696-4018-88a7-8bee88f43b82",
    "metadata": {},
    "outputs": [
@@ -101,10 +132,10 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.base.Connection at 0x74449276e750>"
+       "<sqlalchemy.engine.base.Connection at 0x7f119d91ae10>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,10 +226,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "c2d040da-eabb-45df-8c63-79d3765806a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df\u001b[38;5;241m.\u001b[39mlpep_pickup_datetime \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_datetime(\u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39mlpep_pickup_datetime)\n\u001b[1;32m      2\u001b[0m df\u001b[38;5;241m.\u001b[39mlpep_dropoff_datetime \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_datetime(df\u001b[38;5;241m.\u001b[39mlpep_dropoff_datetime)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "df.tpep_pickup_datetime = pd.to_datetime(df.tpep_pickup_datetime)\n",
     "df.tpep_dropoff_datetime = pd.to_datetime(df.tpep_dropoff_datetime)"
@@ -216,8 +259,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "4bb69f03-c0d3-4320-96a5-9272872350f0",
+   "execution_count": 11,
+   "id": "4f0786de-22e9-4e9c-aa43-2702d65a3025",
    "metadata": {},
    "outputs": [
     {
@@ -230,16 +273,39 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "386"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#df.head(0).to_sql(name='yellow_taxi_data', con=engine, if_exists = 'replace')"
+    "#for homework\n",
+    "df_green_trip.to_sql(name='green_trip', con=engine, if_exists = 'replace')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a36398c8-24f3-4587-a4eb-3a75cd6582d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "265"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#for homework\n",
+    "df_taxi_zone.to_sql(name='taxi_zone', con=engine, if_exists = 'replace')"
    ]
   },
   {
